# beyondcompare-mcp

./: .gitignore  AGENTS.md  ANTIGRAVITY_BUG_REPORT.md  ANTIGRAVITY_PYTHON_ISSUES.md  ANTIGRAVITY_WRAPPER_SETUP.md  ASSESSMENT.md  BUILD_COMPLETE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GOLD_STANDARD_ACHIEVED.md  GOLD_STANDARD_ASSESSMENT.md  INSTALL.md  MCPB_IMPLEMENTATION_COMPLETE.md  README.md  SECURITY.md  TEST_MINIMAL_SETUP.md  dxt_build.py  glama.json  justfile  llms-full.txt  llms.txt  mcpb.json  pip_full_output.txt  py_version_test.txt  pyproject.toml  pyproject.toml.bak  python_version_echo.txt  python_version_utf8.txt  requirements.txt  run_server.py  setup.py  start.ps1  start.ps1.bak.20260508_202255  test_integration.py  test_toml.py  wrapper.py
.github/workflows/: build-mcpb.yml  ci-cd.yml  quality-assurance.yml
HelloWorld30/: README.md  cli.py  languages.json  requirements.txt  server.py
_llm_test_scripts/: test_import.py  test_minimal.py
docs/: API_DOCUMENTATION.md  COMPLETION_ROADMAP.md  CRITICAL_ASSESSMENT.md  CRITICAL_ISSUES.md  DOCUMENTATION_INDEX.md  ENHANCEMENT_ROADMAP.md  FIXES_APPLIED.md  FLEET_GATEWAY.md  HANDOFF_CODEX_MCP_SETUP_2026-07-19.md  MULTIMEDIA_SYNC_TOOLKIT.md  SECURITY-ADVISORY.md  SECURITY-FIXES.md  USER_GUIDE.md  dxt-packaging.md  mcp-compliance.md
mcpb/: README.md  legacy-dxt-manifest.json  manifest.json  mcpb.json  mcpb_build.py  pyproject.toml  requirements.txt
mcpb/assets/: icon.png.placeholder
mcpb/assets/prompts/: examples.json  system.md  user.md
mcpb/assets/screenshots/: README.md
mcpb/scripts/: build-mcpb-package.ps1
mcpb/src/beyondcompare_mcp/: __init__.py  __main__.py  config.py  exceptions.py  multimedia_scanner.py  server.py
native/: Cargo.toml  build.ps1  tauri.conf.json
native/capabilities/: default.json
native/src/: backend.rs
native/windows/: hooks.nsh
scripts/: cua-nsis-config.json
src/beyondcompare_mcp/: __init__.py  __main__.py  _version.py  agentic.py  cli.py  config.py  log_ring.py  multimedia_scanner.py  prompts.py  server.py  skills.py  transport.py
src/beyondcompare_mcp/prompts/: init.txt
src/beyondcompare_mcp/tools/: __init__.py
src/beyondcompare_mcp/tools/developer/: __init__.py  analyzer.py  backup.py  duplicates.py  health.py
tests/: conftest.py  test_fastmcp.py  test_gateway.py  test_gold_standard.py  test_mcp_server.py  test_mocked_integration.py  test_server.py  test_stdio_surface.py  test_toml.py
web_sota/: index.html  package-lock.json  package.json  start.ps1  start.ps1.bak.20260508_202350  vite.config.ts
web_sota/backend/: server.py  start.ps1
web_sota/src/: App.tsx
web_sota/src/common/: apps-catalog.ts
web_sota/src/components/layout/: app-layout.tsx  sidebar.tsx  topbar.tsx
web_sota/src/pages/: Logging.tsx  actions.tsx  chat.tsx  compare.tsx  dashboard.tsx  logs.tsx  settings.tsx  sync.tsx  tools.tsx
web_sota/src/store/: connection.ts
