[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beyondcompare-mcp"
version = "0.1.0"
description = "Modern MCP server for Beyond Compare file and directory comparison"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = [
    "mcp",
    "beyond-compare",
    "file-comparison",
    "directory-sync",
    "model-context-protocol",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
    "Framework :: AsyncIO",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    # MCP server runtime
    "fastmcp>=3.4.2,<4",

    # Configuration
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",

    # Code quality
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/sandraschi/beyondcompare-mcp"
Repository = "https://github.com/sandraschi/beyondcompare-mcp.git"
Issues = "https://github.com/sandraschi/beyondcompare-mcp/issues"

[project.scripts]
beyondcompare-mcp = "beyondcompare_mcp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]


# Test configuration with pytest
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--disable-warnings",
    "--tb=short",
]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "S", "UP", "RUF"]
ignore = ["S101", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
