[build-system]
requires = ["setuptools>=68", "wheel", "build>=0.10.0"]
build-backend = "setuptools.build_meta"

[project]
name = "beyondcompare-mcp"
version = "0.1.0"
description = "Modern MCP server for Beyond Compare file and directory comparison"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = [
    "mcp",
    "beyond-compare",
    "file-comparison",
    "directory-sync",
    "model-context-protocol",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
    "Framework :: AsyncIO",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    # MCP and FastMCP - using actual installed versions
    "mcp>=1.12.4",
    "fastmcp>=3.1.0,<4",

    # Core dependencies
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",

    # Async support
    "anyio>=4.0.0",

    # Logging and configuration
    "structlog>=23.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",

    # Code quality
    "black>=23.9.0",
    "isort>=5.12.0",
    "mypy>=1.6.0",
    "ruff>=0.1.0",

    # Type stubs would go here if needed

    # Development tools
    "pre-commit>=3.4.0",
    "build>=1.0.0",
]

build = ["build>=1.0.0", "wheel>=0.41.0", "twine>=4.0.0"]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/sandraschi/beyondcompare-mcp"
Documentation = "https://github.com/sandraschi/beyondcompare-mcp/docs"
Repository = "https://github.com/sandraschi/beyondcompare-mcp.git"
Issues = "https://github.com/sandraschi/beyondcompare-mcp/issues"
Changelog = "https://github.com/sandraschi/beyondcompare-mcp/blob/main/CHANGELOG.md"

[project.scripts]
beyondcompare-mcp = "beyondcompare_mcp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"beyondcompare_mcp" = ["py.typed"]

# Code formatting with Black
[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# Import sorting with isort
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# Linting with Ruff (fast alternative to flake8)
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "N",  # pep8-naming
    "S",  # flake8-bandit (security)
]
ignore = [
    "E501", # line too long (handled by black)
    "B008", # do not perform function calls in argument defaults
    "S101", # use of assert (OK in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106"] # Allow assert and hardcoded passwords in tests

# Type checking with MyPy
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
extra_checks = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# Test configuration with pytest
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--disable-warnings",
    "--tb=short",
]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"

# Coverage configuration
[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*", "*/test_*.py", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2
fail_under = 80
